--- a/Project4Refactoring/package.json
+++ b/Project4Refactoring/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dance-collective",
+  "name": "project4refactoring",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.20",
-    "@tanstack/react-router": "^1.158.0",
-    "react": "^19.2.0",
+    "@tanstack/react-router": "^1.158.1",
+    "react": "^19.2.4",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.1.0",
     "react-router-dom": "^7.13.0"
